# tide-tracker-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build_rpi.sh  debug.txt  get-binary.sh  install.sh  test_cross.rs  tide-config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: 0_ORIGINAL_PROMPT.md  1_MODIFIED_PROMPT.md  BUILD.md  INSTALLATION.md  WIRING.md
examples/: DEV_Config.c  EPD_4in2b_V2.c
infra/image/: Dockerfile  README.md  build-docker.sh  build.sh  run-build.sh  tidetracker.yaml
infra/image/overlays/boot/: config.txt
infra/image/overlays/etc/systemd/system/: tide-tracker-setup.service  tide-tracker.service  tide-tracker.timer
infra/image/overlays/usr/local/sbin/: wifi-portal.sh
infra/image/overlays/usr/local/share/tideportal/cgi-bin/: wifi-connect.sh
infra/image/scripts/: tidetracker.yaml
output/: debug.txt  debug2.txt
scripts/: build_on_pi.sh  build_rpi.sh  check_hardware.sh  clippy-aarch64.sh  deploy.sh  epd_c_setup.md  get-binary.sh  release.sh  setup-tide-tracker.sh  spi_test.py  sweep.sh  test_display.py  test_display.sh  test_display_rust.rs  wifi-connect-loop.sh  wifi-portal-setup.sh  wifi-portal-update.sh  wifi-setup.sh  wifi-update.sh
scripts/nm-config/: captive.conf
scripts/portal-web/: index.html
scripts/systemd/: wifi-connect.service  wifi-portal.service
src/: config.rs  eink_renderer.rs  epd4in2b_v2.rs  fallback.rs  gpio_sysfs.rs  hardware_test.rs  hw_spi_spidev.rs  lib.rs  lunar.rs  main.rs  renderer.rs  tide_data.rs
src/tests/: data_tests.rs  mod.rs
