[package]
name = "tide-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Tide Tracker Team"]
description = "A lean Rust tide tracker for Raspberry Pi Zero 2 W with e-ink display"
license = "MIT"

[features]
default = []
hardware = ["embedded-hal", "embedded-hal-bus", "rppal"]

[[bin]]
name = "tide-tracker"
path = "src/main.rs"

[lib]
name = "tide_clock_lib"
path = "src/lib.rs"

[dependencies]
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"

# Hardware-specific dependencies (only when hardware feature is enabled)
embedded-hal = { version = "1.0", optional = true }
embedded-hal-bus = { version = "0.3", optional = true }

# Platform-specific dependencies - only compile on Linux ARM targets
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.17", optional = true, features = [] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
# Optimize for size and memory usage on Pi Zero 2 W
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = 1  # Reduced debug info for faster compilation
incremental = true
codegen-units = 256  # More parallel compilation
